<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.EditorActivity">

    <EditText
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dime_8dp"
        android:hint="@string/product_name"
        android:inputType="text"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dime_8dp"
        android:layout_marginEnd="@dimen/dime_8dp"
        android:layout_marginBottom="@dimen/dime_8dp"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dime_8dp"
        android:layout_marginEnd="@dimen/dime_8dp"
        android:layout_marginBottom="@dimen/dime_8dp"
        android:hint="@string/quantity"
        android:inputType="number"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/supplier_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dime_8dp"
        android:layout_marginEnd="@dimen/dime_8dp"
        android:layout_marginBottom="@dimen/dime_8dp"
        android:hint="@string/supplier_name"
        android:inputType="text"
        tools:ignore="Autofill" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dime_8dp"
        android:layout_marginEnd="@dimen/dime_8dp"
        android:layout_marginBottom="@dimen/dime_8dp"
        android:hint="@string/supplier_phone_number"
        android:inputType="phone"
        tools:ignore="Autofill"
        android:id="@+id/supplier_phone_number"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/darker_gray"
        android:text="@string/add"
        android:textSize="@dimen/dim_22sp"
        android:textStyle="bold"
        android:id="@+id/add"/>
</LinearLayout>